fixes problem with too high .page-header__row in ie11

--- a/source/sass/blocks/logo.scss
+++ b/source/sass/blocks/logo.scss
@@ -1,4 +1,8 @@
 .logo {
+  & picture {
+    display: block;
+  }
+
   &:not([href]) {
     pointer-events: none;
   }
